# CW4

./: .flake8  main.py  pyproject.toml
src/: abstract_get_file.py  abstract_get_vacancies_api.py  filemanager.py  hh_api.py  utils.py  vacancy.py
tests/: test_vacancy.py
