[tool.poetry]
name = "cw4"
version = "0.1.0"
description = ""
authors = ["starcev daniil <stdanmark@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.0"
pytest = "^8.3.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
